--- a/index.html
+++ b/index.html
@@ -133,8 +133,20 @@
                     </div>
                     <!-- Side widget-->
                     <div class="card mb-4">
-                        <div class="card-header">Side Widget</div>
-                        <div class="card-body">You can put anything you want inside of these side widgets. They are easy to use, and feature the Bootstrap 5 card component!</div>
+                        <div class="card-header">資訊欄</div>
+                        <div class="card-body">營業資訊
+營業時間    早市：週一休
+夜市：無休市
+商戶數 1F：226個攤位
+B1：94個攤位
+販售商品    早市：蔬果魚肉什貨百貨等
+夜市：各式小吃
+其他資訊
+停車場 百齡高中：232位
+承德公園：177位、機車60位
+前港公園：530位
+劍潭轉乘：139位、機車150位
+劍潭站橋下：機車153位</div>
                     </div>
                 </div>
             </div>
