--- a/index.html
+++ b/index.html
@@ -48,8 +48,16 @@
                         <!-- Post content-->
                         <section class="mb-5">
                             <p class="fs-5 mb-4">位於臺灣臺北市士林區。範圍以市定古蹟士林公有市場為中心，東至文林路、西至基河路、北至小北街與小西街的三角地帶，是台北市內最大、亦是全台打卡次數最高的夜市地標。曾多次獲選為台灣代表夜市、觀光客來台必去景點首選，揚名國際。2018年，在OpView「台灣十大熱門夜市」調查中，網路聲量第一，成為台灣討論度最高之夜市。​士林夜市原本是以小吃與攤商而興起，迄今仍以此為主；然而由於士林夜市的規模與商機極大，周邊地主紛紛開設店面趕上商機。在攤販並未完全合法的城市裡，士林夜市與其他大型固定夜市共同維繫著這一特殊的文化現象，也成為台北市民夜生活的經常去的地方。</p>
-                            <p class="fs-5 mb-4">If you get asteroids about a kilometer in size, those are large enough and carry enough energy into our system to disrupt transportation, communication, the food chains, and that can be a really bad day on Earth.</p>
-                            <h2 class="fw-bolder mb-4 mt-5">I have odd cosmic thoughts every day</h2>
+                            <p class="fs-5 mb-4">早期商人在士林完成農產品買賣交易後，在附近的三腳渡裝貨，沿基隆河經過番仔溝轉往淡水河，將貨物運送到大稻埕、艋舺等地。
+
+1909年，設立「士林市場」一直發展至今。過去的交易主要集中於士林慈諴宮前廣場，然而市場攤販逐漸侵占宮廟用地，於是慈諴宮築起圍牆保留僅存的狹窄廟地，圍牆只能任由攤販使用。
+1913年，興建士林市場。
+1998年，啟用的士林市場被列為市定古蹟。
+1999年，士林市場進行規劃改建。
+2002年10月14日，由於通風、衛生、環境、公共安全等問題，原士林市場攤販移至「士林臨時市場」，位於文林路與基河路口、台北捷運劍潭站對面。臺北市政府將原士林市場拆除改建，僅保留日治時代的磚造市場建築。8月，位於基河路的舊士林市場改建成地上2層、地下3層建築物，未來士林市場飲食類攤位將遷回原址地下一樓。
+2011年12月，士林市場改建完成，攤商開始遷移進入，士林臨時市場正式熄燈。
+2012年，台北捷運劍潭站前方的士林臨時市場執行交地、拆除動作，臨時市場用地則計畫作為興建臺北藝術中心之用。2月，士林市場假日人潮太多，臺北市政府消防局士林分隊在星期五、六、日派遣一台消防車戒備時間18點至00點止，以維護安全。4月，士林市場晚上人數擁擠，對於安全和環境品質有顧慮，將啟動人數控管，設置容留人數控管電子計數器，最高上限1400人；當人數超過時，只出不進。</p>
+                            <h2 class="fw-bolder mb-4 mt-5">範圍</h2>
                             <p class="fs-5 mb-4">For me, the most fascinating interface is Twitter. I have odd cosmic thoughts every day and I realized I could hold them to myself or share them with people who might be interested.</p>
                             <p class="fs-5 mb-4">Venus has a runaway greenhouse effect. I kind of want to know what happened there because we're twirling knobs here on Earth without knowing the consequences of it. Mars once had running water. It's bone dry today. Something bad happened there as well.</p>
                         </section>
