--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 2011年12月，士林市場改建完成，攤商開始遷移進入，士林臨時市場正式熄燈。
 2012年，台北捷運劍潭站前方的士林臨時市場執行交地、拆除動作，臨時市場用地則計畫作為興建臺北藝術中心之用。2月，士林市場假日人潮太多，臺北市政府消防局士林分隊在星期五、六、日派遣一台消防車戒備時間18點至00點止，以維護安全。4月，士林市場晚上人數擁擠，對於安全和環境品質有顧慮，將啟動人數控管，設置容留人數控管電子計數器，最高上限1400人；當人數超過時，只出不進。</p>
                             <h2 class="fw-bolder mb-4 mt-5">範圍</h2>
-                            <p class="fs-5 mb-4">For me, the most fascinating interface is Twitter. I have odd cosmic thoughts every day and I realized I could hold them to myself or share them with people who might be interested.</p>
-                            <p class="fs-5 mb-4">Venus has a runaway greenhouse effect. I kind of want to know what happened there because we're twirling knobs here on Earth without knowing the consequences of it. Mars once had running water. It's bone dry today. Something bad happened there as well.</p>
+                            <p class="fs-5 mb-4">過去範圍：士林夜市過去主要以慈諴宮對面的夜市，以及文林路商圈為中心，後來兩地因規模擴大而合而為一，變成包含文林路、大東路、大南路及安平街等數街區的大型夜市。</p>
+                            <p class="fs-5 mb-4">現在範圍：攤販範圍在基河路以東、文林路以西、小北街至小西街和大南路以南，南邊到基河路和文林路交叉口.東北到小北街與文林路交叉路口、西北到大南路與基河路交叉路口，此三角地帶內的巷子攤販，是台北市內最大、最為人所知的夜市之一。</p>
                         </section>
                     </article>
                     <!-- Comments section-->
