--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <a class="badge bg-secondary text-decoration-none link-light" href="#!"></a>
                         </header>
                         <!-- Preview image figure-->
-                        <figure class="mb-4"><img class="img-fluid rounded" src="https://dummyimage.com/900x400/ced4da/6c757d.jpg" alt="..." /></figure>
+                        <figure class="mb-4"><img class="img-fluid rounded" src="assets/jj.jpg" alt="..." /></figure>
                         <!-- Post content-->
                         <section class="mb-5">
                             <p class="fs-5 mb-4">位於臺灣臺北市士林區。範圍以市定古蹟士林公有市場為中心，東至文林路、西至基河路、北至小北街與小西街的三角地帶，是台北市內最大、亦是全台打卡次數最高的夜市地標。曾多次獲選為台灣代表夜市、觀光客來台必去景點首選，揚名國際。2018年，在OpView「台灣十大熱門夜市」調查中，網路聲量第一，成為台灣討論度最高之夜市。​士林夜市原本是以小吃與攤商而興起，迄今仍以此為主；然而由於士林夜市的規模與商機極大，周邊地主紛紛開設店面趕上商機。在攤販並未完全合法的城市裡，士林夜市與其他大型固定夜市共同維繫著這一特殊的文化現象，也成為台北市民夜生活的經常去的地方。</p>
