--- a/index.html
+++ b/index.html
@@ -52,10 +52,25 @@
                             <p class="fs-5 mb-4">早期商人在士林完成農產品買賣交易後，在附近的三腳渡裝貨，沿基隆河經過番仔溝轉往淡水河，將貨物運送到大稻埕、艋舺等地。
                         </section>
                     </article>
-                <!-- Side widgets-->
-                <div class="col-lg-4">
-                    <!-- Side widget-->
+ <!-- 鄰近捷運站-->
                     <div class="card mb-4">
+<div class="card-header">鄰近捷運站</div>
+<div class="card-body">
+淡水信義線-------劍潭捷運站 </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- 交通方式-->
+                    <div class="card mb-4">
+                        <div class="card-header">交通方式</div>
+                        <div class="card-body">
+                          從中山站1號出口步行約5分鐘即可到達
+                                </div>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                         <div class="card-header">資訊欄</div>
                         <div class="card-body">
 <p>營業時間</p>
